--- a/packages/i18n/cli/package.json
+++ b/packages/i18n/cli/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@format-editor/cli",
+	"name": "@knuddels/i18n-cli",
 	"version": "1.0.1",
 	"main": "dist/api.js",
 	"types": "dist/api.d.ts",
@@ -36,5 +36,8 @@
 		"vscode-rpc": "^0.13.0",
 		"ws": "^7.0.1",
 		"ts-node": "^8.4.1"
+	},
+	"devDependencies": {
+		"@knuddels/i18n-frontend": "0.0.1"
 	}
 }
