--- a/packages/i18n/lib/package.json
+++ b/packages/i18n/lib/package.json
@@ -3,6 +3,11 @@
 	"version": "1.0.0",
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Knuddels/typescript-building-blocks.git"
+	},
+	"homepage": "https://github.com/Knuddels/typescript-building-blocks",
 	"dependencies": {
 		"@knuddels/std": "1.0.0",
 		"intl-messageformat": "^7.3.2"
