--- a/packages/i18n/frontend/package.json
+++ b/packages/i18n/frontend/package.json
@@ -24,7 +24,8 @@
 		"react-svg-pan-zoom": "2.*",
 		"svg-inline-react": "^3.1.0",
 		"viz.js": "^2.1.2",
-		"folder-hash": "^3.2.0"
+		"folder-hash": "^3.2.0",
+		"@blueprintjs/select": "^3.11.1"
 	},
 	"devDependencies": {
 		"@types/classnames": "^2.2.8",
