--- a/packages/i18n/cli/package.json
+++ b/packages/i18n/cli/package.json
@@ -32,7 +32,7 @@
 		"serve-handler": "^6.0.2",
 		"to-absolute-glob": "^2.0.2",
 		"ts-morph": "^9.1.0",
-		"typescript": "^4.1.3",
+		"typescript": "4.1.3",
 		"vscode-rpc": "^0.13.0",
 		"ws": "^7.0.1",
 		"ts-node": "^9.1.1",
